--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.vue": "^0.0.1",
     "core-js": "^3.10.0",
-    "npx": "^3.0.0",
+    "npx": "^10.2.2",
     "onsenui": "^2.11.2",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.12",
+    "vue-google-charts": "^0.3.3",
     "vue-onsenui": "^2.6.2",
     "vue-reactive-storage": "github:ropbla9/vue-reactive-storage",
     "vuex": "^3.6.2"
