--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "chart.vue": "^0.0.1",
     "core-js": "^3.10.0",
+    "lz-string": "^1.4.4",
     "npx": "^10.2.2",
     "onsenui": "^2.11.2",
     "register-service-worker": "^1.7.1",
